--- a/SIGNUM PROJECT/aboutc.css
+++ b/SIGNUM PROJECT/aboutc.css
@@ -3,7 +3,7 @@ body {
   color: #404040;
   text-align: center;
   padding: 100px;
-  background-image: url(https://lh3.googleusercontent.com/proxy/hfACFJ8bsEb_G3pKdQKkqy-KVt_RHTd38aLUGn1SC9t4B0X9e94lpUEU_je1NQ0qQqs0GhbAu5lNfwEXRqDbaQKSm5D7nC2vXhgxCfg053E);
+  background-image: url(https://cdn.wallpapersafari.com/66/82/pKCuAG.png);
   color: #fff;
 }
 
